Light editing in data.tex.

--- a/data.tex
+++ b/data.tex
@@ -7,7 +7,7 @@
   \par\raggedleft--- \textup{Proverbs 14:15} (ESV)}
 
 A useful starting point for someone studying data science is a definition of the term itself.
-In this chapter, I discuss some definitions in the literature and provide a definition of my
+In this chapter, I discuss some common definitions and provide a definition of my
 own.  As discussed in \cref{chap:history}, there is no consensus on the definition of data
 science.  However, they all agree that data science is cross-disciplinary and a very
 important field of study.
@@ -75,8 +75,8 @@ In literature, we can find many definitions and descriptions of data science.
 For \textcite{Zumel2019}\footfullcite{Zumel2019}, \emph{``data science is a cross-disciplinary practice that draws
 on methods from data engineering, descriptive statistics, data mining, machine learning,
 and predictive analytics.''}  They compare the area with operations research, stating
-that data science focuses on implementing data-driven decisions and managing their
-consequences.
+that data science focuses on implementing data-driven decisions and managing
+consequences of these decisions.
 
 \textcite{Wickham2023}\footfullcite{Wickham2023} declare that \emph{``data science is an exciting discipline that
 allows you to transform raw data into understanding, insight, and knowledge.''}
