--- a/glossary.tex
+++ b/glossary.tex
@@ -6,7 +6,7 @@
 \newabbreviation{rdbms}{RDBMS}{relational database management system}
 \newabbreviation{etl}{ETL}{extract, transform, load}
 \newabbreviation{bi}{BI}{business intelligence}
-\newabbreviation{hdfs}{HDFS}{hadoop distributed file system}
+\newabbreviation{hdfs}{HDFS}{Hadoop distributed file system}
 \newabbreviation{lusi}{LUSI}{learning using statistical inference}
 \newabbreviation{iot}{IoT}{internet of things}
 \newabbreviation{lifo}{LIFO}{last-in-first-out}
@@ -28,7 +28,7 @@
 \newglossaryentry{ontology}{%
   name=ontology,
   description={%
-    Ontology is the study of being, existence and reality. In computer science and
+    Ontology is the study of being, existence, and reality. In computer science and
     information science, an ontology is a formal naming and definition of the types,
     properties, and interrelationships of the entities that really or fundamentally exist
     for a particular domain.}
@@ -37,7 +37,7 @@
 \newglossaryentry{leakage}{%
   name=data leakage,
   description={%
-    Situation where information from the test set is used to transform the training
+    A situation where information from the test set is used to transform the training
     set in any way or to train the model.}
 }
 
